Using attribute selectors

--- a/webview-ui/src/diagnostics_panel/App.css
+++ b/webview-ui/src/diagnostics_panel/App.css
@@ -23,22 +23,22 @@ main {
   margin-bottom: 2px;
 }
 
-.plot-d6a7b5-swatches {
+[class^='plot-'][class$='-swatches'] {
   font-family: system-ui, sans-serif;
   font-size: 10px;
   margin-bottom: 0.5em;
 }
-.plot-d6a7b5-swatch > svg {
+[class^='plot-'][class$='-swatch'] > svg {
   margin-right: 0.5em;
   overflow: visible;
 }
-.plot-d6a7b5-swatches-wrap {
+[class^='plot-'][class$='-swatches-wrap'] {
   display: flex;
   align-items: center;
   min-height: 33px;
   flex-wrap: wrap;
 }
-.plot-d6a7b5-swatches-wrap .plot-d6a7b5-swatch {
+[class^='plot-'][class$='-swatches-wrap'] [class^='plot-'][class$='-swatch'] {
   display: inline-flex;
   align-items: center;
   margin-right: 1em;
