--- a/webview-ui/src/diagnostics_panel/App.css
+++ b/webview-ui/src/diagnostics_panel/App.css
@@ -23,22 +23,22 @@ main {
   margin-bottom: 2px;
 }
 
-[class^='plot-'][class$='-swatches'] {
+.minecraft-statistic-stacked-line-chart-swatches {
   font-family: system-ui, sans-serif;
   font-size: 10px;
   margin-bottom: 0.5em;
 }
-[class^='plot-'][class$='-swatch'] > svg {
+.minecraft-statistic-stacked-line-chart-swatch > svg {
   margin-right: 0.5em;
   overflow: visible;
 }
-[class^='plot-'][class$='-swatches-wrap'] {
+.minecraft-statistic-stacked-line-chart-swatches-wrap {
   display: flex;
   align-items: center;
   min-height: 33px;
   flex-wrap: wrap;
 }
-[class^='plot-'][class$='-swatches-wrap'] [class^='plot-'][class$='-swatch'] {
+.minecraft-statistic-stacked-line-chart-swatches-wrap .minecraft-statistic-stacked-line-chart-swatch {
   display: inline-flex;
   align-items: center;
   margin-right: 1em;
