Fix most of the CPS violation

--- a/webview-ui/src/diagnostics_panel/App.css
+++ b/webview-ui/src/diagnostics_panel/App.css
@@ -23,13 +23,17 @@ main {
   margin-bottom: 2px;
 }
 
+.minecraft-statistic-stacked-line-chart-figure {
+  max-width: initial;
+}
+
 .minecraft-statistic-stacked-line-chart-swatches {
   font-family: system-ui, sans-serif;
   font-size: 10px;
   margin-bottom: 0.5em;
 }
 
-.minecraft-statistic-stacked-line-chart-swatch > svg {
+.minecraft-statistic-stacked-line-chart-swatch>svg {
   margin-right: 0.5em;
   overflow: visible;
 }
@@ -46,3 +50,135 @@ main {
   align-items: center;
   margin-right: 1em;
 }
+
+/* .minecraft-statistic-stacked-line-chart {
+  --plot-background: white;
+  display: block;
+  height: auto;
+  height: intrinsic;
+  max-width: 100%;
+} */
+
+/* .minecraft-statistic-stacked-line-chart text .minecraft-statistic-stacked-line-chart tspan {
+  white-space: pre;
+} */
+
+.minecraft-statistic-stacked-bar-chart-figure {
+  max-width: initial;
+}
+
+.minecraft-statistic-stacked-bar-chart-swatches {
+  font-family: system-ui, sans-serif;
+  font-size: 10px;
+  margin-bottom: 0.5em;
+}
+
+.minecraft-statistic-stacked-bar-chart-swatch>svg {
+  margin-right: 0.5em;
+  overflow: visible;
+}
+
+.minecraft-statistic-stacked-bar-chart-swatches-wrap {
+  display: flex;
+  align-items: center;
+  min-height: 33px;
+  flex-wrap: wrap;
+}
+
+.minecraft-statistic-stacked-bar-chart-swatches-wrap .minecraft-statistic-stacked-bar-chart-swatch {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 1em;
+}
+
+/* .minecraft-statistic-stacked-bar-chart {
+  --plot-background: white;
+  display: block;
+  height: auto;
+  height: intrinsic;
+  max-width: 100%;
+} */
+
+/* .minecraft-statistic-stacked-bar-chart text .minecraft-statistic-stacked-bar-chart tspan {
+  white-space: pre;
+} */
+
+.line-chart-figure {
+  max-width: initial;
+}
+
+.line-chart-swatches {
+  font-family: system-ui, sans-serif;
+  font-size: 10px;
+  margin-bottom: 0.5em;
+}
+
+.line-chart-swatch>svg {
+  margin-right: 0.5em;
+  overflow: visible;
+}
+
+.line-chart-swatches-wrap {
+  display: flex;
+  align-items: center;
+  min-height: 33px;
+  flex-wrap: wrap;
+}
+
+.line-chart-swatches-wrap .line-chart-swatch {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 1em;
+}
+
+/* .line-chart {
+  --plot-background: white;
+  display: block;
+  height: auto;
+  height: intrinsic;
+  max-width: 100%;
+} */
+
+/* .line-chart text .line-chart tspan {
+  white-space: pre;
+} */
+
+.difference-chart-figure {
+  max-width: initial;
+}
+
+.difference-chart-swatches {
+  font-family: system-ui, sans-serif;
+  font-size: 10px;
+  margin-bottom: 0.5em;
+}
+
+.difference-chart-swatch>svg {
+  margin-right: 0.5em;
+  overflow: visible;
+}
+
+.difference-chart-swatches-wrap {
+  display: flex;
+  align-items: center;
+  min-height: 33px;
+  flex-wrap: wrap;
+}
+
+.difference-chart-swatches-wrap .difference-chart-swatch {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 1em;
+}
+
+/* .difference-chart {
+  --plot-background: white;
+  display: block;
+  height: auto;
+  height: intrinsic;
+  max-width: 100%;
+} */
+
+/* .difference-chart text .difference-chart tspan {
+  white-space: pre;
+} */
