--- a/webview-ui/src/diagnostics_panel/App.css
+++ b/webview-ui/src/diagnostics_panel/App.css
@@ -41,7 +41,7 @@ main {
 .minecraft-statistic-stacked-line-chart-swatches-wrap {
   display: flex;
   align-items: center;
-  min-height: 33px;
+  /* min-height: 33px; */
   flex-wrap: wrap;
 }
 
@@ -81,7 +81,7 @@ main {
 .minecraft-statistic-stacked-bar-chart-swatches-wrap {
   display: flex;
   align-items: center;
-  min-height: 33px;
+  /* min-height: 33px; */
   flex-wrap: wrap;
 }
 
